# Orbbec_Gemini_SLAM

./: CMakeLists.txt  LICENSE  README.md
Examples/: DBoW3Test.cpp  DoubleIRTest.cpp  DoubleInfraredViewer.cpp  ORBextractorTest.cpp  ViewTest.cpp
Examples/OrbbecDemo/: MultiDevice.cpp  OrbbecDoubleIRView.cpp  TurnOffLaserDemo.cpp  ViewTest.cpp
Examples/Stereo-Inertial/: Orbbec_Gemini335L.yaml  stereo_inertial_euroc.cc  stereo_inertial_realsense_t265.cc
include/: IMU.hpp  IMUFrameQueueContainer.hpp  IMUProcessor.hpp  ImuTypes.h  ORBextractor.hpp
src/: IMU.cpp  IMUFrameQueueContainer.cpp  IMUProcessor.cpp  IMUReaderDemo.cpp  ORBextractor.cpp  demo.cpp
